# bufzel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod
breaking_test/: README.md  WORKSPACE  buf_deps.bzl
breaking_test/build_defs/: breaking.bzl
breaking_test/example/: BUILD.bazel
build_defs/: buf.bzl
example/: BUILD.bazel
existing_rules/: BUILD.bazel  deps.bzl  go.mod  go.sum  tools.go
existing_rules/build_defs/internal/: go_buf_proto_library.bzl
existing_rules/example/: BUILD.bazel  helloworld.proto
gazelle/patches/: com_github_bufbuild_buf.patch
new_rules/: BUILD.bazel  WORKSPACE  buf_binaries.bzl  deps.bzl  go.sum  tidy.sh  tools.go
new_rules/build_defs/: buf.bzl
new_rules/example/: BUILD.bazel
