load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/shawntabai/bufzel
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "bufzel",
    srcs = ["tools.go"],
    importpath = "github.com/shawntabai/bufzel",
    visibility = ["//visibility:public"],
    deps = ["@com_github_bufbuild_buf//:buf"],
)
