# gazelle:ignore

# You'll need to add this repo in your WORKSPACE file as a remote dependency:
"""
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "com_github_shawntabai_bufzel",
  sha256 = "usewhateveritsuggestsinsteadofthis",
  urls = [
    "https://github.com/shawntabai/bufzel/archive/v0.0.1.tar.gz",
  ],
)
"""

# Load standard proto library rules.
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# Create a standard abstract proto library.
proto_library(
  name = "helloworld_proto",
  srcs = ["helloworld.proto"],
  visibility = ["//visibility:public"],
)

# Use buf compiler to create go code from an abstract proto library (equivalent to `buf generate`).
go_proto_library(
  name = "helloworld_go_proto",
  compiler = "@com_github_shawntabai_bufzel//:buf_go_proto_compiler",
  importpath = "example",
  protos = [":helloworld_proto"],
)
